Fix z-index on cart, prevent layout shift layered nav

--- a/web/tailwind/tailwind-output.css
+++ b/web/tailwind/tailwind-output.css
@@ -2297,6 +2297,10 @@ body {
   z-index: 10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-30 {
   z-index: 30;
 }
